--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-accessible-accordion": "^4.0.0",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
