--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-accessible-accordion": "^4.0.0",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropdown": "^1.9.2",
+    "react-dropdown-select": "^4.8.0"
   },
   "devDependencies": {
     "eslint": "7",
