--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
     "react-dropdown": "^1.9.2",
-    "react-dropdown-select": "^4.8.0"
+    "react-dropdown-select": "^4.8.0",
+    "react-lazy-load-image-component": "^1.5.1"
   },
   "devDependencies": {
     "eslint": "7",
