--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
+    "@supabase/supabase-js": "^2.0.0",
+    "ethers": "^5.7.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-accessible-accordion": "^4.0.0",
@@ -16,7 +18,8 @@
     "react-dom": "17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropdown-select": "^4.8.0",
-    "react-lazy-load-image-component": "^1.5.1"
+    "react-lazy-load-image-component": "^1.5.1",
+    "wagmi": "^0.7.5"
   },
   "devDependencies": {
     "eslint": "7",
