--- a/.github/workflows/shame-data-cron.yml
+++ b/.github/workflows/shame-data-cron.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: cURL request
         # Hit the webhook endpoint to rebuild  from the "main" branch
-        run: curl -X POST -d {} https://burn-stats-iota.vercel.app/api/shame-data-job
+        run: curl -X POST -d {} https://burnlog.vercel.app/api/shame-data-job
