--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@supabase/supabase-js": "^2.0.0",
+    "dayjs": "^1.11.6",
     "ethers": "^5.7.1",
     "next": "12.0.3",
     "react": "17.0.2",
@@ -18,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-dropdown": "^1.9.2",
     "react-dropdown-select": "^4.8.0",
+    "react-intersection-observer": "^9.4.0",
     "react-lazy-load-image-component": "^1.5.1",
     "wagmi": "^0.7.5"
   },
